fixes some merge issues

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- second screen with rules that should be hidden until test your skill <button> and re-hidden when start game <button> is press -->
-    <div class="container hidden" id="rule-page">
+    <div class="container hidden" id="rules-page">
       <div class="row rules-page">
         <div class="u-pull-left">
             <h1>Game Rules!</h1>
